# bmx.hs

./: .gitignore  README.md  ambiata-bmx.cabal  ambiata-bmx.lock-7.10.2  ambiata-bmx.lock-8.0.1  bmx.cabal  boris-git.toml  boris.toml  mafia  master.toml  package.json
main/: bmx.hs
src/: BMX.hs  Bmx.hs
src/BMX/: Builtin.hs  Data.hs  Debug.hs  Eval.hs  Function.hs  Helpers.hs  Internal.hs  Lexer.hs  Parser.y  React.hs  TH.hs
src/BMX/Builtin/: Debug.hs  Decorators.hs  Helpers.hs
src/BMX/Data/: AST.hs  Data.hs  Error.hs  Eval.hs  Format.hs  Function.hs  Page.hs  Position.hs  Token.hs  Value.hs
src/BMX/Eval/: Function.hs
src/BMX/Internal/: Function.hs
src/BMX/React/: helpers.js
test/: ambiata-bmx-test.cabal  bench.hs  test-io.hs  test.hs
test/Test/BMX/: Arbitrary.hs  Eval.hs  Function.hs  Lexer.hs  Orphans.hs  Page.hs  Parser.hs  Position.hs  TH.hs
test/Test/IO/BMX/: React.hs
test/parser/: brackets  helpers.hbs  if.hbs  ifelse  paths  pathsdotdot.hbs  unless  user  user.hbs
