name:                  ambiata-bmx
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-bmx
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-bmx

library
  build-depends:
                       base                            >= 3          && < 5
                     , transformers                    >= 0.3        && < 0.5
                     , either                          >= 4.3        && < 4.5
                     , ambiata-p
                     , bifunctors
                     , text                            == 1.2.*
                     , attoparsec                      == 0.13.*
                     , safe                            == 0.3.*
                     , array                           == 0.5.*

  build-tools:         happy

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_ambiata_bmx
                       BMX
                       BMX.Data
                       BMX.Lexer
                       BMX.Parser

  other-modules:
                       BMX.Data.Token                       
                       BMX.Data.AST


executable bmx
  ghc-options:      -Wall -threaded -O2
  build-depends:
                       base
                     , ambiata-p
                     , ambiata-bmx
                     , text

  main-is:             main/bmx.hs


test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -fno-warn-missing-signatures

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-bmx
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , QuickCheck
                     , quickcheck-instances            == 0.3.*
                     , text
                     , attoparsec
