name:                  ambiata-bmx
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-bmx
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           ambiata-bmx

library
  build-depends:
                       base                            >= 3          && < 5
                     , template-haskell                >= 2.9        && < 2.11
                     , transformers                    >= 0.3        && < 0.5
                     , either                          >= 4.3        && < 4.5
                     , ambiata-p
                     , ambiata-x-aeson
                     , ambiata-x-eithert
                     , ambiata-x-templatehaskell
                     , syb
                     , text                            == 1.2.*
                     , safe                            == 0.3.*
                     , array                           == 0.5.*
                     , parsec                          == 3.1.*
                     , mtl                             == 2.2.*
                     , containers                      == 0.5.*
                     , unordered-containers            == 0.2.*
                     , blaze-html                      == 0.8.*
                     , scientific                      == 0.3.*
                     , filemanip                       == 0.3.*
                     , filepath                        == 1.3.*

  build-tools:         happy

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       -- API
                       BMX
                       BMX.Builtin
                       BMX.Builtin.Debug
                       BMX.Builtin.Decorators
                       BMX.Builtin.Helpers
                       BMX.Function

                       -- Guts
                       BMX.Debug
                       BMX.Eval
                       BMX.Eval.Function
                       BMX.Lexer
                       BMX.Parser
                       BMX.TH

                       -- Data
                       BMX.Data
                       BMX.Data.AST
                       BMX.Data.Error
                       BMX.Data.Eval
                       BMX.Data.Format
                       BMX.Data.Function
                       BMX.Data.Page
                       BMX.Data.Token                       
                       BMX.Data.Value

                       Paths_ambiata_bmx

executable bmx
  ghc-options:      -Wall -threaded -O2
  build-depends:
                       base
                     , ambiata-p
                     , ambiata-bmx
                     , ambiata-x-aeson
                     , ambiata-x-eithert
                     , ambiata-x-optparse
                     , text
                     , transformers
                     , directory                       == 1.2.*

  hs-source-dirs:      gen

  main-is:             ../main/bmx.hs


test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -fno-warn-missing-signatures

  hs-source-dirs:
                       test

  other-modules:
                       Test.BMX.Arbitrary
                     , Test.BMX.Eval
                     , Test.BMX.Function
                     , Test.BMX.Lexer
                     , Test.BMX.Orphans
                     , Test.BMX.Parser
                     , Test.BMX.Page
                     , Test.BMX.TH

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-bmx
                     , ambiata-disorder-aeson
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-x-aeson
                     , QuickCheck                      >= 2.8.2 && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , text
                     , attoparsec
                     , syb
                     , containers
                     , blaze-html
                     , mtl
                     , transformers
